--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ li {
   color: rgb(135, 135, 135);
   font-size: 16px;
   font-weight: 100px;
+  text-transform: capitalize;
 }
 
 .weather-wrapper {
