--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,13 @@ li {
   color: rgb(135, 135, 135);
   font-size: 16px;
   font-weight: 100px;
+}
+
+li::first-letter {
   text-transform: capitalize;
 }
+
+
 
 .weather-wrapper {
   max-width: 600px;
@@ -36,29 +41,29 @@ li {
   border-radius: 5px;
 }
 
-.overview{
-    margin-bottom: 20px;
+.overview {
+  margin-bottom: 20px;
 }
 
-.weather-temperature img{
-    margin-right: 5px;
-    width: 64px;
-    height: 64px;
+.weather-temperature img {
+  margin-right: 5px;
+  width: 64px;
+  height: 64px;
 }
 
-.weather-temperature strong{
-    color: rgb(33, 33, 33);
-    font-size: 64px;
-    line-height: 1;
-    font-weight: 400;
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
 }
 
-.weather-temperature .units{
-    position: relative;
-    font-size: 16px;
-    top: -34px;
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
