--- a/src/style.css
+++ b/src/style.css
@@ -67,3 +67,9 @@ li::first-letter {
 a {
   text-decoration: none;
 }
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+
